samples/_failures_safe/1761667227_e8685d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5007bdcb.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_5007bdcb.c:188:12: error: missing terminating " character
  188 |     printf("Dijkstra
      |            ^~~~~~~~~
./samples/SAFE/__tmp_5007bdcb.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra
      |     ^~~~~~
./samples/SAFE/__tmp_5007bdcb.c:188:5: error: expected declaration or statement at end of input
